--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -1,6 +1,7 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html>
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+ <meta charset=utf-8">
  <title>Seminar on Average-Case Complexity</title> 
  <style>td{text-align:center;padding:5px} </style>
 </head>
@@ -33,9 +34,12 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
 <br> <br>
 <h2>Topics and schedule</h2> 
-<table>
+
+<table  border=1 style="BORDER-BOTTOM: medium none; BORDER-LEFT: medium none; BORDER-COLLAPSE:
+ collapse; BORDER-TOP: medium none; BORDER-RIGHT: medium none" border="1" cellpadding="0" cellspacing="0">
  <tbody>
- <tr>
+ 
+ <tr> 
     <td> # </td> <td> When </td> <td> Who </td> <td> What </td>     
  </tr>
  
@@ -63,7 +67,8 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
 	 <td> 5 </td> <td>  28/4  </td>? <td>  </td> <td><a href=http://eccc.hpi-web.de/report/2006/122/revision/1/download/>All Natural NPC Problems Have Average-Case Complete Versions</a> 
-  <br> <i> Paper by Noam Livne  </td>   	 
+  <br> <i> Paper by Noam Livne </i>
+ </td>   	 
  </tr>
 
  <tr  style= "BACKGROUND: #FF00FF 0% 50%">
@@ -81,7 +86,8 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 9 </td> <td> 19/5 </td> <td> ? </td> <td> <a href=http://www.cs.cmu.edu/~odonnell/papers/hardness.pdf>Hardness amplification within NP</a>  <br>  <i> Paper by Ryan O'Donnell</td>     
+    <td> 9 </td> <td> 19/5 </td> <td> ? </td> <td> <a href=http://www.cs.cmu.edu/~odonnell/papers/hardness.pdf>Hardness amplification within NP</a>  <br>  <i> Paper by Ryan O'Donnell</i>
+</td>     
  </tr>
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
@@ -89,16 +95,18 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">    
-	 <td> 11 </td> <td> 2/6 </td> <td> ? </td> <td> <a href=http://dimacs.rutgers.edu/~adib/pubs/redux-sicomp.pdf>On Worst-Case to Average-Case Reductions for NP Problems</a>  <br>  <i> Paper by Andrej Bogdanov and Luca Trevisan</td>   
+	 <td> 11 </td> <td> 2/6 </td> <td> ? </td> <td> <a href=http://dimacs.rutgers.edu/~adib/pubs/redux-sicomp.pdf>On Worst-Case to Average-Case Reductions for NP Problems</a>  <br>  <i> Paper by Andrej Bogdanov and Luca Trevisan</i>
+</td>   
  </tr>
  
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-     <td> 12</td> <td> 9/6  </td> <td> ? </td> <td> <a href=http://eccc.hpi-web.de/report/2012/156/revision/1/download>Limits of provable security for homomorphic encryption</a>  <br>  <i> Paper by  Andrej Bogdanov and Chin Ho Lee </td>    
+     <td> 12</td> <td> 9/6  </td> <td> ? </td> <td> <a href=http://eccc.hpi-web.de/report/2012/156/revision/1/download>Limits of provable security for homomorphic encryption</a>  <br>  <i> Paper by  Andrej Bogdanov and Chin Ho Lee</i>
+ </td>    
  </tr>
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
 	 <td> 13</td> <td>  16/6   </td> <td> ? </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
-SAT</a>  <br>  <i> Paper by  Mohammad Mahmoody and David Xiao
+SAT</a>  <br>  <i> Paper by  Mohammad Mahmoody and David Xiao </i>
 </td>    
  </tr>
  
