--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -66,7 +66,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
-	 <td> 5 </td> <td>  28/4  </td>? <td>  </td> <td><a href=http://eccc.hpi-web.de/report/2006/122/revision/1/download/>All Natural NPC Problems Have Average-Case Complete Versions</a> 
+	 <td> 5 </td> <td>  28/4  </td> <td> ? </td> <td><a href=http://eccc.hpi-web.de/report/2006/122/revision/1/download/>All Natural NPC Problems Have Average-Case Complete Versions</a> 
   <br> <i> Paper by Noam Livne </i>
  </td>   	 
  </tr>
