--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -118,7 +118,7 @@ SAT</a>  <br>  <i> Paper by  Mohammad Mahmoody and David Xiao </i>
 <br><br> 
 
 
-<h2> Additional Readings</h2>
+<h2> Additional Reading</h2>
 
 <ul> 
   <li> Sanjeev Arora and Boaz Barak <a href=https://www.cs.princeton.edu/theory/complexity">Computational Complexity: A Modern Approach.</a> </li>
