--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -10,10 +10,15 @@
 
 
 <h1><span style="FONT-SIZE: 26pt">Seminar on Average-Case Complexity<br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
+
+<img alt="" height="334" src="naranjas.jpg" width="500"><br>
+                                                            
 <h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
 
 
 <span style="FONT-SIZE: 20pt"> Tuesdays: &nbsp;10:00-12:00,&nbsp; Room: ? </span> <br><br><br>
+                                                                                              
+
 
 The first part of the seminar we will follow the <a href="http://www.cse.cuhk.edu.hk/~andrejb/pubs/average-now.pdf">survey</a> by Andrej Bogdanov and Luca Trevisan, and then move to more 
 	recent results<br><br>
