--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -49,16 +49,16 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 1 </td> <td> 10/3 </td> <td> ? </td> <td> Introduction <br> <i>Section 1</i> </td>     
+    <td> 1 </td> <td> 10/3 </td> <td> Ethan Grundstein </td> <td> Introduction <br> <i>Section 1</i> </td>     
  </tr>
 
 
 <tr  style= "BACKGROUND: red">
-    <td>  </td> <td> 17/3 </td> <td> ? </td> <td> NO CLASS </td>     
+    <td>  </td> <td> 17/3 </td> <td>  </td> <td> NO CLASS </td>     
  </tr>
 
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 2 </td> <td> 24/3 </td> <td> ? </td> <td> Definitions <br> <i>Section 2</i> </td>     
+    <td> 2 </td> <td> 24/3 </td> <td> Adi Sela </td> <td> Definitions <br> <i>Section 2</i> </td>     
  </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
