--- a/index.html
+++ b/index.html
@@ -344,18 +344,19 @@ of Cryptography (Spring 14)</a></span></td>
 <font face="Book Antiqua" size="2">
 in Reverse Chronological Order</font></h1>
 <ul>
-<!-- On the Power of Random Oracles --><!-- On the Power of Random Oracles -->
+
+
 <li>
-<p><a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay
-Berman</a> and Iftach Haitner and&nbsp; <a href="http://cs.nyu.edu/%7Etentes/Homepage.html">Aris Tentes</a><br>
-<strong>Coin Flipping of Any Constant Bias Implies
-One-Way Functions </strong> <span class="style14"><strong><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-TightCT')">Abstract</a><span class="style11">] <span class="style14" dir="ltr">
-[<a href="papers/TightCF/TightCoinFlipping_full.ppsx">Slides</a>]</span></span><span class="style14" dir="ltr">&nbsp;<span class="style11"><img src="new.gif" height="11" width="28"></span></span></span></strong><br>
-STOC 2014 <span style="font-weight: 400;"> <span class="style14" dir="ltr"> <a name="HHRSJoint0"></a>
-<span class="style11">[</span><a href="papers/TightCF/TightCoingFlipping_CR.pdf">PDF</a><strong><span class="style11">]</span></strong></span></span></span></p>
+<p>
+<a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay Berman</a> and Iftach Haitner and  <a href="http://cs.nyu.edu/%7Etentes/Homepage.html">Aris Tentes</a><br>
+<strong>Coin Flipping of Any Constant Bias Implies One-Way Functions </strong> <br>
+<a href="javascript:toggle('abstract-TightCT')">abstract</a> <a href="papers/TightCF/TightCoinFlipping_full.ppsx">slides</a><br>
+STOC 2014 <a name="HHRSJoint0"></a> <a href="papers/TightCF/TightCoingFlipping_CR.pdf">PDF</a>
+</p>
+</li>
+
 <div class="box" id="abstract-TightCT" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
-<p>We show that the existence of a coin-flipping
-protocol safe against any non-trivial constant bias (e.g., <span class="auto-style2">.499</span>), implies the
+<p>We show that the existence of a coin-flipping protocol safe against any non-trivial constant bias (e.g., <span class="auto-style2">.499</span>), implies the
 existence of one way functions. This improves upon a recent result of <span class="auto-style1">Haitner and Omri [FOCS ’11]</span>,
 who proved this implication for protocols with bias <span class="auto-style2">√ 2−<sup>1</sup>⁄<sub>2</sub>&nbsp;
 </span>&nbsp;<span class="auto-style2">~.207</span>.
@@ -363,15 +364,20 @@ Unlike the result of <span class="auto-style1">Haitner
 and Omri</span>, our result holds also for <em>
 weak</em> coin-flipping protocols.</p>
 </div>
-</li>
+
+
+
+
 <li>
-<p>Iftach Haitner and Eliad Tsfadia <br>
-<strong>An Almost-Optimally Fair Three-Party
-Coin-Flipping Protocol</strong><span class="style14"><span style="font-weight: 400;"><strong><span class="style14" dir="ltr"><span class="style11">
-[<a href="javascript:toggle('abstract-3CT-Q')">Abstract</a>]&nbsp;
-[<a href="papers/3PartyCF/3Party-full.ppsx">Slides</a>]
-<img src="new.gif" height="11" width="28"></span></span></strong></span></span><br>
-<span class="style14">STOC 2014 <span style="font-weight: 400;"> <span class="style14" dir="ltr"> <a name="HHRSJoint1"></a> <span class="style11">[</span><a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">PDF</a><strong><span class="style11">]</span></strong></span></span></span></p>
+<p>
+Iftach Haitner and Eliad Tsfadia <br>
+<strong>An Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong> <!<img src="new.gif" height="11" width="28"> <br>
+  <a href="javascript:toggle('abstract-3CT-Q')">abstract</a> <a href="papers/3PartyCF/3Party-full.ppsx">slides</a> <br>
+STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">pdf</a><br>
+Draft of dull version <a href="papers/3PartyCF/QuasiOptimalCF.pdf">pdf</a> <img src="updated.gif" height="12" width="60">  <br> 
+</p>
+</li>
+
 <div class="box" id="abstract-3CT-Q" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 <p>In a multiparty, fair coin-flipping protocol, the
 parties output a common (close to) unbiased bit, even when some
@@ -407,22 +413,24 @@ follow the “threshold round” paradigm used in the work of <span class="auto-
 but rather is a takeoff of the majority protocol of <span class="auto-style1">Cleve</span> (used to obtain the <span class="auto-style2">Θ(t/√ m )</span>-bias protocol,
 mentioned above).</p>
 </div>
+
+
+
+
+
+
+
+<li>
+<p>
+Iftach Haitner, <a href="http://www.wisdom.weizmann.ac.il/%7Eyaakovh">Jonathan J. Hoch</a>, <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a> and <a href="http://www.wisdom.weizmann.ac.il/%7Egils/">Gil Segev</a><br>
+<strong>Finding Collisions in Interactive Protocols — Tight Lower Bounds on the Round Complexity and Communication Complexityof Statistically Hiding Commitments </strong><br>
+<a href="javascript:toggle('abstract-FindingCollisionsJoint')">abstract</a><br>
+SIAM Journal of Computing 2015, to appear<br>
+
+Draft of full version <a href="papers/FindingCollisions/FindingCollisions_Joint.pdf"> pdf</a>  <img src="updated.gif" height="12" width="60">
+</p>
 </li>
-<li style="width: 1160px;"> <span style="font-weight: 400;"> <a name="HHRSJoint"></a>
-<span style="font-weight: 400;" dir="ltr">Iftach
-Haitner</span>, <a href="http://www.wisdom.weizmann.ac.il/%7Eyaakovh">Jonathan
-J. Hoch</a>, <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer
-Reingold</a> and <a href="http://www.wisdom.weizmann.ac.il/%7Egils/">Gil Segev</a>
-<br>
-<strong>Finding Collisions in Interactive Protocols —
-Tight Lower Bounds on the Round Complexity and Communication Complexity
-of Statistically Hiding Commitments </strong>[<a href="javascript:toggle('abstract-FindingCollisionsJoint')">Abstract</a>]
-<br>
-SIAM Journal of Computing 2015, to appear.
-<br>
-Draft of full version <span class="style14"> <span class="style14" dir="ltr"><a name="HHRSJoint"></a>
-<span class="style11">[</span><a href="papers/FindingCollisions/FindingCollisions_Joint.pdf">PDF</a><strong><span class="style11">]</span></strong></span></span> <img src="updated.gif" height="12" width="60"><br>
-</span>
+
 <div class="box" id="abstract-FindingCollisionsJoint" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 <h2><span style="font-weight: 400;">
 <p>We study the round complexity and communication
@@ -441,7 +449,10 @@ reconstruction paradigm of <span class="auto-style1">Gennaro
 and Trevisan (FOCS ’00).</span></p>
 </span></h2>
 </div>
-</li>
+
+
+
+
 <li>
 <p><a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay
 Berman</a> and Iftach Haitner and&nbsp;<a href="https://sites.google.com/site/ilankomhomepage/"> Ilan
