--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ in Reverse Chronological Order</font></h1>
 <a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay Berman</a> and Iftach Haitner and  <a href="http://cs.nyu.edu/%7Etentes/Homepage.html">Aris Tentes</a><br>
 <strong>Coin Flipping of Any Constant Bias Implies One-Way Functions </strong> <br>
 <a href="javascript:toggle('abstract-TightCT')">abstract</a> <a href="papers/TightCF/TightCoinFlipping_full.ppsx">slides</a><br>
-STOC 2014 <a name="HHRSJoint0"></a> <a href="papers/TightCF/TightCoingFlipping_CR.pdf">PDF</a>
+STOC 2014 <a name="HHRSJoint0"></a> <a href="papers/TightCF/TightCoingFlipping_CR.pdf">pdf</a>
 </p>
 </li>
 
