--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -62,7 +62,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 3 </td> <td> 14/4 </td> <td> ? </td> <td> A Complete Problem for Computable Ensembles: part<span style= "color:#3300CC"> &#8544</span><br> <i>Section 3</i> </td>     
+    <td> 3 </td> <td> 14/4 </td> <td> Avishay Yifrach </td> <td> A Complete Problem for Computable Ensembles: part<span style= "color:#3300CC"> &#8544</span><br> <i>Section 3</i> </td>     
  </tr>
 
  
