--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -67,7 +67,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-   <td> 4 </td> <td> 21/4 </td> <td> ? </td> <td> A Complete Problem for Computable Ensembles: part <span style= "color:#3300CC"> &#8545</span><br> <i>Section 3</i> </td>      
+   <td> 4 </td> <td> 21/4 </td> <td> Paz Dangur  </td> <td> A Complete Problem for Computable Ensembles: part <span style= "color:#3300CC"> &#8545</span><br> <i>Section 3</i> </td>      
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%"> 
