--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -83,7 +83,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 7 </td> <td>   5/5  </td> <td> ? </td> <td> Samplable Ensembles <br> <i>Section 5</i> </td>        
+    <td> 7 </td> <td>   5/5  </td> <td> Tal Keng </td> <td> Samplable Ensembles <br> <i>Section 5</i> </td>        
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
