--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -105,13 +105,15 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
  
 <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-     <td> 12</td> <td> 9/6  </td> <td> ? </td> <td> <a href=http://eccc.hpi-web.de/report/2012/156/revision/1/download>Limits of provable security for homomorphic encryption</a>  <br>  <i> Paper by  Andrej Bogdanov and Chin Ho Lee</i>
+     <td> 12</td> <td> 9/6  </td> <td> ? </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
+SAT</a> 
+	 <br>  <i> Paper by  Mohammad Mahmoody and David Xia</i>
  </td>    
  </tr>
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-	 <td> 13</td> <td>  16/6   </td> <td> ? </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
-SAT</a>  <br>  <i> Paper by  Mohammad Mahmoody and David Xiao </i>
+	 <td> 13</td> <td>  16/6   </td> <td> ? </td> <td> <a href=http://www.cs.tau.ac.il/~amnon/Papers/GST.CCC07.pdf>If NP Languages Are Hare On The
+Worst-Case,<br>Then It Is Easu to Find Their Hard Instances</a>  <br>  <i> Paper by  Dan Gutfreund, Ronen Shaltiel, and Amnon Ta-Shma </i>
 </td>    
  </tr>
  
@@ -126,9 +128,9 @@ SAT</a>  <br>  <i> Paper by  Mohammad Mahmoody and David Xiao </i>
 <h2> Additional Reading</h2>
 
 <ul> 
-  <li> Sanjeev Arora and Boaz Barak <a href=https://www.cs.princeton.edu/theory/complexity">Computational Complexity: A Modern Approach.</a> </li>
+  <li> Sanjeev Arora and Boaz Barak <a href="https://www.cs.princeton.edu/theory/complexity">Computational Complexity: A Modern Approach.</a> </li>
 
-  <li> Oded Goldreich <a href=http://www.wisdom.weizmann.ac.il/~oded/cc-book.html">Computational Complexity: A Conceptual Perspective.</a> </li>
+  <li> Oded Goldreich <a href="http://www.wisdom.weizmann.ac.il/~oded/cc-book.html">Computational Complexity: A Conceptual Perspective.</a> </li>
   </ul> 
   <br><br> 
 
