--- a/index.html
+++ b/index.html
@@ -105,16 +105,8 @@ Goldreich</a>, and did my undergraduate studies (Mathematics and
 Computer Science) at <a href="http://www.tau.ac.il/">Tel-Aviv
 university</a><br><br>
 
-<b>Grants</b><br>
-<ul>
-<li>[2011-2015] Israel  Science Foundation(ISF) -- Individual research grant. </li>
-<li>[2011-2015] Israel Science Foundation (ISF) -- Equipment for new faculty. </li>
-<li>[2011-2015] Israel Science Foundation(ISF) -- Israeli Center of Research Excellence in Algorithms. </li>
-<li>[2011-2015] US-Israel Binational Science Foundation
-(BSF), with Salil Vadhan.</li>
-</ul>
-<br>
-<b>wards and Fellowships</b><br>
+
+<b>Awards and Fellowships</b><br>
 <ul>
 <li>[2011] One of the three winning papers of the 2011 SIAM Outstanding  Paper Prizes.<br>
 The prizes are given for outstanding papers published in SIAM journals during the three years prior to the year of the award. </li>
@@ -126,6 +118,19 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <li> [2006] Best paper CRYPTO 2006</li>
 <li> [2006] Best paper award ICALP 2006 track C</li>
 </ul>
+<br>
+
+
+<b>Grants</b><br>
+<ul>
+<li>[2015-2020] European Research Council (ERC) Starting Grant  -- Individual research grant. </li>
+<li>[2011-2015] Israel  Science Foundation (ISF) -- Individual research grant. </li>
+<li>[2011-2015] Israel Science Foundation (ISF) -- Equipment for new faculty. </li>
+<li>[2011-2015] Israel Science Foundation(ISF) -- Israeli Center of Research Excellence in Algorithms. </li>
+<li>[2011-2015] US-Israel Binational Science Foundation
+(BSF), with Salil Vadhan.</li>
+</ul>
+
 </div>
 
 
@@ -188,17 +193,16 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <p>
 <a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay Berman</a> and Iftach Haitner and  <a href="http://cs.nyu.edu/%7Etentes/Homepage.html">Aris Tentes</a><br>
 <strong>Coin Flipping of Any Constant Bias Implies One-Way Functions </strong> <br>
-<span class=abslide>[Abstract]</span>[<a href="papers/TightCF/TightCoinFlipping_full.ppsx">slides</a>]<br>
+<span class=abslide>[abstract]</span>[<a href="papers/TightCF/TightCoinFlipping_full.ppsx">slides</a>]<br>
 STOC 2014 <a name="HHRSJoint0"></a> <a href="papers/TightCF/TightCoingFlipping_CR.pdf">[PDF]</a>
 </p>
 
 
 <div class="box"  >
-<p>We show that the existence of a coin-flipping protocol safe against any non-trivial constant bias (e.g., .<span class=blu1>499</span>), implies the
-existence of one way functions. This improves upon a recent result of <span class=blu2>Haitner and Omri</span> [FOCS ’11],
-who proved this implication for protocols with bias √ 2−<sup>1</sup>⁄<sub>2</sub>&nbsp;
-&nbsp;~.207.
-Unlike the result of
+<p>We show that the existence of a coin-flipping protocol safe against any non-trivial constant bias (e.g., <span class=blu2>.499</span>), implies the
+existence of one way functions. This improves upon a recent result of <span class=blu1>Haitner and Omri [FOCS ’11]</span> ,
+who proved this implication for protocols with bias 
+<span class=blu2>&radic;<span style="text-decoration:overline;">&nbsp;2&nbsp;</span>− <sup>1</sup>⁄<sub>2</sub>&nbsp;~.207</span>. Unlike the result of
 Haitner and Omri , our result holds also for <em>
 weak</em> coin-flipping protocols.</p>
 </div>
@@ -210,53 +214,39 @@ weak</em> coin-flipping protocols.</p>
 
 Iftach Haitner and Eliad Tsfadia <br>
 <strong>An Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><br>
- [<span class=abslide>Abstract</span>] [<a href="papers/3PartyCF/3Party-full.ppsx">slides</a>] <br>
+ [<span class=abslide>abstract</span>] [<a href="papers/3PartyCF/3Party-full.ppsx">slides</a>] <br>
 STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">[PDF]</a><br>
 Draft of dull version <a href="papers/3PartyCF/QuasiOptimalCF.pdf">[PDF]</a> <img src="up7.png" class=update1>
 
 
 
 <div class="box"  >
-<p>In a multiparty, fair coin-flipping protocol, the
-parties output a common (close to) unbiased bit, even when some
-corrupted parties try to bias the output. Cleve
-[STOC 1986] has shown that in the case of dishonest
-majority (i.e., at least half of the parties can be corrupted), the
-corrupted parties can bias the honest parties common output bit
-by&nbsp; Ω(1/m), in any m-round, coin-flipping
-protocol. For more than two decades, however, the best known
-coin-flipping protocols had bias Θ(t/√
-m) against dishonest majority, where t is the number of
-corrupted parties. This was changed by a recent breakthrough result of Moran et al. [TCC 2009],
-who constructed an m-round,
-two-party coin-flipping protocol with optimal bias Θ(1/m). Where in a
-subsequent work, Beimel et al.
-[Crypto 2010] extended this result for the multiparty
-case, in which less than  <sup>2</sup>⁄<sub>3</sub> of
-the parties can be corrupted. More specifically, for any t &lt; <sup>2</sup>⁄<sub>3</sub>
-· k, they
-presented an m-round, k-party
-protocol, with bias Θ( 2<sup>2t−k</sup>/m)
-against (up to) t
-corrupted parties.&nbsp; Still for the case  <sup>2</sup>⁄<sub>3</sub>
-(or more) corrupted parties, the best known protocol had bias Θ(t/√ m). In particular,
+<p>In a multiparty, fair coin-flipping protocol, the parties output a common (close to) unbiased bit, even when some  corrupted parties try to bias the output.
+<span class=blu1> Cleve [STOC 1986] </span> has shown that in the case of dishonest
+majority (i.e., at least half of the parties can be corrupted), the  corrupted parties can bias the honest parties common output bit
+by  <span class=blu2> &Omega;(1/m)</span>, in any m-round, coin-flipping protocol. For more than two decades, however, the best known
+coin-flipping protocols had bias <span class=blu2> &Theta;(&radic;<span style="text-decoration:overline;">t</span>)</span> 
+against dishonest majority, where <span class=blu2>t</span> is the number of
+corrupted parties. This was changed by a recent breakthrough result of <span class=blu1> Moran et al. [TCC 2009]</span>,
+who constructed an <span class=blu2>m</span>-round,
+two-party coin-flipping protocol with optimal bias <span class=blu2>&Theta;(1/m)</span>. Where in a
+subsequent work, <span class=blu1> Beimel et al. [Crypto 2010]</span> extended this result for the multiparty
+case, in which less than  <span class=blu2> <sup>2</sup>⁄<sub>3</sub></span> of case, in which less than  <span class=blu2> <sup>2</sup>⁄<sub>3</sub></span> of
+the parties can be corrupted. More specifically, for any <span class=blu2> t &lt; <sup>2</sup>⁄<sub>3</sub>
+· k </span>, they presented an <span class=blu2>m</span>-round, <span class=blu2>k</span>-party
+protocol, with bias <span class=blu2>&Theta;( 2<sup>2t−k</sup>/m)</span> against (up to) <span class=blu2>t</span>
+corrupted parties. Still for the case  <span class=blu2> <sup>2</sup>⁄<sub>3</sub></span>
+(or more) corrupted parties, the best known protocol had bias <span class=blu2> &Theta;(t/&radic;<span style="text-decoration:overline;">m</span>)</span>. In particular,
 this was the state of affairs for the natural three-party case (against
 two corrupted parties).<br>
 <br>
 We make a step towards eliminating the above gap, presenting an m-round, three-party,
-coin-flipping protocol, with bias&nbsp;
-O(log 3 m)/m.
-Our approach (which we also apply for the two-party case), does not
+coin-flipping protocol, with bias <span class=blu2> O(log 3 m)/m</span>. Our approach (which we also apply for the two-party case), does not
 follow the “threshold round” paradigm used in the work of Moran et al. and Beimel et al.,
-but rather is a takeoff of the majority protocol of Cleve (used to obtain the Θ(t/√ m )-bias protocol,
+but rather is a takeoff of the majority protocol of Cleve (used to obtain the <span class=blu2> &Theta;(&radic;<span style="text-decoration:overline;">t</span>)</span>-bias protocol,
 mentioned above).</p>
 </div>
 </li>
-
-
-
-
-
 
 
 <li>
