--- a/index.html
+++ b/index.html
@@ -191,6 +191,33 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <li>
 <p>
+<a href="http://u.cs.biu.ac.il/~cohenrb/">Ran Cohen</a> and Iftach Haitner and  <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> <br>
+<strong>Lower Bounds for Secure Multiparty Computation Without Broadcast </strong>  <img src="new.png" class=update1><br>
+<span class=abslide>[abstract]</span><br>
+Draft of full version <a href="papers/NoBroadcastCoin/MPCNoBroadcast.pdf">[pdf]</a> 
+</p>
+
+
+<div class="box">
+<p>
+A major challenge in the study of cryptography is characterizing the necessary and sufficient assumptions required to conduct a given cryptographic task. 
+The focus of this work is the necessity of a broadcast channel for secure multiparty computation, involving three or more parties. 
+We show that if one third of the parties might be corrupted, broadcast is necessary for securely computing any symmetric <span class=blu2>n</span>-party 
+functionality that is not an
+<span class=blu2>n/3</span>-junta; a functionality is a <span class=blu2>k</span>-junta, if any <span class=blu2>k</span>-size subset of its input variables can be set to determine its output. The
+above immediately yields that securely computing (in the presence of one-third corruptions) non-junta symmetric functionalities, 
+like Boolean XOR, requires broadcast. It also shows the necessity of broadcast for securely computing symmetric random functionalities like coin-flipping
+protocols (in which all honest parties must output a common value). The above characterization is 
+tight for three-party symmetric functionalities that can be securely computed with broadcast (e.g., Boolean OR), since 
+<span class=blu1>Cohen and Lindell [Asiacrypt ’14]</span> showed that such three-party <span class=blu2>1</span>-junta
+symmetric functionalities, can be securely computed without broadcast. Our proof employs a novel extension of the well-known hexagon argument of 
+<span class=blu1>Fischer et al. [PODC ’85]</span>, for the case of non-junta randomized functionalities.
+</p>
+</div>
+</li>
+
+<li>
+<p>
 <a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay Berman</a> and Iftach Haitner and  <a href="http://cs.nyu.edu/%7Etentes/Homepage.html">Aris Tentes</a><br>
 <strong>Coin Flipping of Any Constant Bias Implies One-Way Functions </strong> <br>
 <span class=abslide>[abstract]</span>&nbsp<a href="papers/TightCF/TightCoinFlipping_full.ppsx">[slides]</a><br>
@@ -215,7 +242,7 @@ Iftach Haitner and Eliad Tsfadia <br>
 <strong>An Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><br>
 <span class=abslide>[abstract]</span> <a href="papers/3PartyCF/3Party-full.ppsx">[slides]</a> <br>
 STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">[pdf]</a><br>
-Draft of dull version <a href="papers/3PartyCF/QuasiOptimalCF.pdf">[pdf]</a> <img src="up7.png" class=update1>
+Draft of dull version <a href="papers/3PartyCF/QuasiOptimalCF.pdf">[pdf]</a> <img src="new.png" class=update1>
 
 
 
@@ -259,7 +286,7 @@ and <a href="http://www.wisdom.weizmann.ac.il/%7Egils/">Gil Segev</a><br>
 <span class=abslide>[abstract]</span><br>
 SIAM Journal of Computing 2015, to appear<br>
 
-Draft of full version <a href="papers/FindingCollisions/FindingCollisions_Joint.pdf"> [pdf]</a>  <img src="new8.png" class=update1>
+Draft of full version <a href="papers/FindingCollisions/FindingCollisions_Joint.pdf"> [pdf]</a>  <img src="up.png" class=update1>
 </p>
 
 
@@ -459,7 +486,7 @@ Iftach Haitner,   <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Re
 
 SIAM Journal of Computing 2013    <a  href="http://epubs.siam.org/doi/abs/10.1137/100814421">[link]</a><br>
 Annual ACM Symposium on Theory of Computing (STOC), 2010  <a href="papers/HillRevisted/HillRevisted_STOC.pdf">[pdf]</a><br>
-Draft of full version <a href="papers/HillRevisted/HillRevisted_Full.pdf">[pdf]</a> <img src="up7.png" class=update1></p>
+Draft of full version <a href="papers/HillRevisted/HillRevisted_Full.pdf">[pdf]</a> <img src="up.png" class=update1></p>
 </p>
 
 <div class="box" >
