--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ Iftach Haitner,   <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Re
 
 SIAM Journal of Computing 2013    <a  href="http://epubs.siam.org/doi/abs/10.1137/100814421">[link]</a><br>
 Annual ACM Symposium on Theory of Computing (STOC), 2010  <a href="papers/HillRevisted/HillRevisted_STOC.pdf">[pdf]</a><br>
-Draft of full version <a href="papers/HillRevisted/HillRevisted_Full.pdf">[pdf]</a> <img src="up.png" class=update1></p>
+Draft of full version <a href="papers/HillRevisted/HillRevisted_Full.pdf">[pdf]</a>
 </p>
 
 <div class="box" >
