--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -16,7 +16,7 @@
 <h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
 
 
-<span style="FONT-SIZE: 20pt"> Tuesdays: &nbsp;10:00-12:00,&nbsp; Room: ? </span> <br><br><br>
+<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: Schriber 008 </span> <br><br><br>
                                                                                               
 
 
@@ -32,7 +32,7 @@ are also welcome.
 
 <h2>Presentations</h2>
 Power Point presentations are acceptable, but white boards ones are preferable.<br>
-To do a good job one needs to <strong>read background material</strong>, see the reading section. <br> <br>
+To do a good job one needs to <strong>read background material</strong>, see the reading section. <br> 
 
 In addition, the speakers of the week will have to give me a <strong>practice talk</strong> a week before (right after the talk of that week).
 
@@ -76,44 +76,45 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </td>   	 
  </tr>
 
- <tr  style= "BACKGROUND: #FF00FF 0% 50%">
+ <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
    
-	<td> 6 </td> <td>  1/5 <br> Friday  </td> <td> ? </td> <td> Decision Versus Search and One-Way Functions <br> <i>Section 4</i> </td>    
+	<td> 6 </td> <td>  5/5  </td> <td> ? </td> <td> Decision Versus Search and One-Way Functions <br> <i>Section 4</i> </td>    
  </tr>
 
  
+ <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
+    <td> 7 </td> <td>   12/5  </td> <td> Tel Keng </td> <td> Samplable Ensembles <br> <i>Section 5</i> </td>        
+ </tr>
+
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 7 </td> <td>   5/5  </td> <td> Tel Keng </td> <td> Samplable Ensembles <br> <i>Section 5</i> </td>        
+    <td> 8 </td> <td> 19/5 </td> <td>?</td> <td>  Hardness Amplification   <br> <i>Section 6</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 8 </td> <td> 12/5 </td> <td>?</td> <td>  Hardness Amplification   <br> <i>Section 6</i></td>     
- </tr>
-
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 9 </td> <td> 19/5 </td> <td> ? </td> <td> <a href=http://www.cs.cmu.edu/~odonnell/papers/hardness.pdf>Hardness amplification within NP</a>  <br>  <i> Paper by Ryan O'Donnell</i>
+    <td> 9 </td> <td> 26/5 </td> <td> ? </td> <td> <a href=http://www.cs.cmu.edu/~odonnell/papers/hardness.pdf>Hardness amplification within NP</a>  <br>  <i> Paper by Ryan O'Donnell</i>
 </td>     
  </tr>
  
- <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 10 </td> <td> 26/5 </td> <td> ? </td> <td> Worst-Case Versus Average-Case and Cryptography (without proof of Thm. 7.5)<br> <i>Section 7</i></td>     
+ <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+    <td> 10 </td> <td> 2/6 </td> <td> ? </td> <td> Worst-Case Versus Average-Case and Cryptography (without proof of Thm. 7.5)<br> <i>Section 7</i></td>     
  </tr>
 
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">    
-	 <td> 11 </td> <td> 2/6 </td> <td> ? </td> <td> <a href=http://dimacs.rutgers.edu/~adib/pubs/redux-sicomp.pdf>On Worst-Case to Average-Case Reductions for NP Problems</a>  <br>  <i> Paper by Andrej Bogdanov and Luca Trevisan</i>
+ <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
+	 <td> 11 </td> <td> 9/6 </td> <td> ? </td> <td> <a href=http://dimacs.rutgers.edu/~adib/pubs/redux-sicomp.pdf>On Worst-Case to Average-Case Reductions for NP Problems</a>  <br>  <i> Paper by Andrej Bogdanov and Luca Trevisan</i>
 </td>   
  </tr>
  
-<tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-     <td> 12</td> <td> 9/6  </td> <td> ? </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
+<tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
+     <td> 12</td> <td> 16/6   </td> <td> ? </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
 SAT</a> 
 	 <br>  <i> Paper by  Mohammad Mahmoody and David Xia</i>
  </td>    
  </tr>
  
- <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-	 <td> 13</td> <td>  16/6   </td> <td> ? </td> <td> <a href=http://www.cs.tau.ac.il/~amnon/Papers/GST.CCC07.pdf>If NP Languages Are Hare On The
-Worst-Case,<br>Then It Is Easu to Find Their Hard Instances</a>  <br>  <i> Paper by  Dan Gutfreund, Ronen Shaltiel, and Amnon Ta-Shma </i>
+ <tr  style= "BACKGROUND: #FF00FF 0% 50%">
+	 <td> 13</td> <td>  21/6 <br>
+<b>Sunday</b>	 </td> <td> ? </td> <td> <a href=http://www.cs.tau.ac.il/~amnon/Papers/GST.CCC07.pdf>If NP Languages Are Hare On The
+Worst-Case,<br>Then It Is Easy to Find Their Hard Instances</a>  <br>  <i> Paper by  Dan Gutfreund, Ronen Shaltiel, and Amnon Ta-Shma </i>
 </td>    
  </tr>
  
