--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ on the newer notion of inaccessible entropy.
 <li>
 <p>
 Iftach Haitner,  <a href="http://www.cs.princeton.edu/%7Emohammad/">Mohammad Mahmoody</a> and <a href="http://www.cs.princeton.edu/%7Edxiao/"> David Xiao</a><br>
-<strong>A New Sampling Protocol and Applications to Basing Cryptographic Primitives on the Hardness of NP<br>
+<strong>New Sampling Protocol and Applications to Basing Cryptographic Primitives on the Hardness of NP</strong><br>
 <span class=abslide>[abstract]</span> <br>
 IEEE Conference on Computational Complexity (CCC), 2010 <a href="papers/SampleWithSize/SampleWithSize_CCC.pdf">[pdf]</a><br>
 Draft of full version <a href="papers/SampleWithSize/SampleWithSize.pdf">[pdf]</a>
@@ -644,7 +644,7 @@ While parallel repetition reduces (at an exponential rate) the error in interact
 arguments (e.g., 3-message protocols - <span class=blu1>Bellare, Impagliazzo and Naor [FOCS '97]</span>, and 
 public-coin protocols - <span class=blu1>Håstad, Pass, Pietrzak and
 WikstrÄom [TCC '10])</span>, Bellare et. al gave example of interactive arguments for which parallel repetition does not reduce the soundness
-error at <strong>all.<br>
+error at <strong>all</strong>.<br>
 
 We show that by slightly modifying  <em>any</em> interactive argument, in a way that preserves its completeness and only
 slightly deteriorates its soundness, we get a protocol for which parallel repetition does reduce the error at a weak exponential rate.
@@ -654,15 +654,13 @@ coin (i.e., <span class=blu2>1</span> is tossed with probability <span class=blu
 original verifier would. At the end of the protocol (if reached), the
 verifier accepts if and only if the original verifier would.
 </p>
-
 </div>
 </li>
 
 <li>
-<p><a name="HONRV"></a>Iftach Haitner, Minh-Huyen Nguyen, Shien Jin Ong,  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer
-Reingold</a> and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a><br>
-<b>Statistically Hiding Commitments and Statistical Zero-Knowledge Arguments from Any 
-One-Way Function</b> <br>
+<p><a name="HONRV"></a>
+Iftach Haitner, Minh-Huyen Nguyen, Shien Jin Ong, <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">OmercReingold</a> and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a><br>
+<strong>Statistically Hiding Commitments and Statistical Zero-Knowledge Arguments from Any One-Way Function</strong> <br>
 <span class=abslide>[abstract]</span>  <br>
 SIAM Journal of Computing 2009  <a  href="http://epubs.siam.org/doi/abs/10.1137/080725404">[link]</a><br>
 Draft of full version  <a href="papers/HNORV/HNORV-sicomp.pdf">[pdf]</a>
@@ -824,7 +822,7 @@ primitives in a black-box manner. In this setting, we establish a tight lower bo
 polynomially-preserving construction that relies on trapdoor permutations. More specifically, our main result states that in such
 constructions <span class=blu2>Ω(n)</span> bits must be communicated by the server, where <span class=blu2>n</span>
 is the size of the server's database, and this improves the <span class=blu2>Ω(n / log n)</span> lower bound due to
-<span class=blu1> Haitner, Hoch, Reingold and Segev [0FOCS '07]</span>. Therefore, in the setting under consideration, the naive solution in which the user downloads the
+<span class=blu1> Haitner, Hoch, Reingold and Segev [FOCS '07]</span>. Therefore, in the setting under consideration, the naive solution in which the user downloads the
 entire database turns out to be optimal up to constant multiplicative factors. We note that the lower bound we establish holds for the most
 generic form of trapdoor permutations, including in particular enhanced trapdoor permutations.<br>
 Technically speaking, this paper consists of two main contributions from which our lower bound is obtained. First, we derive a tight lower
